--- a/css/common.css
+++ b/css/common.css
@@ -376,12 +376,12 @@ body { min-width: 1020px;}
 .clear-input { position: absolute; display: none; right: 0; top: 0; margin-right: 10px; margin-top: 12px; }
 
 .search-city-wrap { position: relative; margin-bottom: 15px; width: 268px; }
-.search-city-wrap input { width: 100%; height: 25px; padding: 0 10px; font-size: 16px; color: #583d8b; line-height: 25px; vertical-align: top; }
+.search-city-wrap input { width: 100%; height: 25px; padding: 0 10px; font-size: 16px; color: #583d8b; line-height: 25px; vertical-align: top; background: #E9E6F1; border:1px solid #583d8b;}
 .search-city-wrap .clear-input { margin-top: 8px; margin-right: 8px; }
 
-.location-wrap {position: relative; display: none; min-height: 220px; margin-top: -1px; padding-left: 20px; padding-right: 20px; padding-bottom: 20px; background-color: #583d8b; }
+.location-wrap {position: relative; display: none; min-height: 220px; margin-top: -1px; padding-left: 20px; padding-right: 20px; padding-bottom: 20px; background-color: white;border: 1px solid #583d8b; }
 
-.location-title { margin-bottom: 10px; padding-bottom: 3px; font-size: 16px; color: #fff; border-bottom: 1px solid #fff; *zoom: 1; }
+.location-title { margin-bottom: 10px; padding-bottom: 3px; font-size: 16px; color: #fff; border-bottom:1px solid #583d8b; *zoom: 1; }
 .location-title:after { content: ""; display: table; clear: both; }
 .location-title-all, .location-title-region, .location-title-back { float: left; margin-right: 20px; font-size: inherit; color: #FF9543;
     font-weight: bold; background-color: transparent; cursor: pointer; }
@@ -392,7 +392,7 @@ body { min-width: 1020px;}
 
 .region-wrap, .city-wrap { width: 100%; font-size: 14px; color: #fff; *zoom: 1; }
 .region-wrap:after, .city-wrap:after { content: ""; display: table; clear: both; }
-.region-wrap .region-list, .region-wrap .city-list, .city-wrap .region-list, .city-wrap .city-list { -webkit-column-count: 4; -moz-column-count: 4; column-count: 4; -webkit-column-rule: 1px solid rgba(255, 255, 255, 0.5); -moz-column-rule: 1px solid rgba(255, 255, 255, 0.5); column-rule: 1px solid rgba(255, 255, 255, 0.5); }
+.region-wrap .region-list, .region-wrap .city-list, .city-wrap .region-list, .city-wrap .city-list { color:#583d8b; -webkit-column-count: 4; -moz-column-count: 4; column-count: 4; -webkit-column-rule: 1px solid rgba(255, 255, 255, 0.5); -moz-column-rule: 1px solid rgba(255, 255, 255, 0.5); column-rule: 1px solid rgba(255, 255, 255, 0.5); }
 .region-wrap .region-list li, .region-wrap .city-list li, .city-wrap .region-list li, .city-wrap .city-list li { cursor: pointer; }
 .region-wrap .region-list li:first-letter{font-weight: bold; padding-right: 2px; font-size: 16px;}
 .city-wrap .city-list li:first-letter{font-weight: bold; padding-right: 2px; font-size: 16px;}
